added css tutorial file and js tutorial files and edited html to comply with new files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World</p>
+    <p>MMO DPS Game</p>
+    <p id="DPS">DPS: </p>
+    <script src="js-tut.js"></script>
+    <style src = "css-tut.css"></style>
 </body>
 </html>
