added js-dps.js, basic user input, js-tut.js now lets you move square on screen

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <canvas id = "canvas" />
+    <script src="js-dps.js"></script>
+    <style src = "css-tut.css"></style>
 </head>
 <body>
-    <p>MMO DPS Game</p>
-    <p id="DPS">DPS: </p>
-    <script src="js-tut.js"></script>
-    <style src = "css-tut.css"></style>
 </body>
 </html>
