--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Clicktown</title>
-    <canvas id = "canvas" />
+    <canvas id = "canvas" style="position:absolute" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js-dps.js"></script>
     <style src = "css-tut.css"></style>
