button 1 now deals damage to enemy, enemy given health bar and health text over it

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Clicktown</title>
     <canvas id = "canvas" style="position:absolute" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js-dps.js"></script>
+    <script src="js-logic.js"></script>
     <style src = "css-tut.css"></style>
 </head>
 <body>
