--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <canvas id = "canvas" style="position:absolute" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js-logic.js"></script>
-    <style src = "css-tut.css"></style>
+    <link rel="stylesheet" href="css-tut.css"></link>
 </head>
 </html>
